# User-Behavior-Analytics-Pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
BigQuery/: README.md  clickstream_analysis.sql  create_external_table.sql  create_partitioned_table.sql  created_partitioned_clustered_table.sql
airflow/: .env.example  Dockerfile  docker-compose.yaml
airflow/dags/: clickstream_ingest_raw.py  clickstream_pipeline.py  clickstream_spark_transform.py
airflow/dags/sql/: create_external_table.sql  create_partitioned_clustered_table.sql  create_partitioned_table.sql
data/: README.md  data_exploration.ipynb
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: fct_funnel_events.sql  mart_daily_funnel_kpi.sql  mart_funnel.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_clickstream.sql
docs/portfolio/clickstream/: ppt_prompt.md  ppt_script.md  ppt_slides.md
kestra/: README.md  docker-compose.yml
kestra/flows/: csv_gcs_load.yml  gcp_kv.yaml
spark/: Dockerfile.spark  README.md  csv_parquet.ipynb  docker-compose.yaml  requirements.txt
spark/jobs/: csv_parquet_job.py
terraform/: README.md  main.tf  variables.tf
tests/: README.md
tests/integration/: test_spark_transform_integration.py
tests/load/: test_load_todo.py
tests/performance/: test_performance_todo.py
tests/resilience/: test_resilience_todo.py
tests/unit/: test_clickstream_dag.py  test_spark_csv_parquet_job.py
